docs(site): add a Requirements section to the landing page
List the minimum supported version per language next to the install/snippet
tabs, with a link to the full Requirements page in the docs — an install
command alone doesn't tell you what runtime you need.